--- a/mammamia/.env
+++ b/mammamia/.env
@@ -1,1 +1,3 @@
-
+TMDB_KEY=f29da1a0f404dcf4593279a0316b2c73
+PROXY=["http://nepmerri-rotate:z3vdxrsg8fsa@p.webshare.io:80"]
+FORWARDPROXY=http://nepmerri-rotate:z3vdxrsg8fsa@p.webshare.io:80/
