--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
   #  build: https://github.com/qwertyuiop8899/streamvix.git#main
    # container_name: streamv
    # env_file:
-      - ./streamv/.env
+    #  - ./streamv/.env
    # restart: unless-stopped
    # command: pnpm start
    # networks:
